objects/Account.object
<CustomObject>
    <fields>
        <fullName>CN_Delivery_Block__c</fullName>
        <label>Delivery Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 Credit limit</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 Waitting confirm</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 Bottleneck material</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 Export papers missng</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05 Check free of ch.dlv</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>06 No printing</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>07 Change in quantity</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08 Kanban Delivery</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09 JIT delivery (PDS)</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 Not achieve MOQ</label>
                </value>
                <value>
                    <fullName>S0</fullName>
                    <label>S0-Overdue Payment</label>
                </value>
                <value>
                    <fullName>S1</fullName>
                    <label>S1-Credit Limit</label>
                </value>
                <value>
                    <fullName>S2</fullName>
                    <label>S2-Food License Lack</label>
                </value>
                <value>
                    <fullName>S3</fullName>
                    <label>S3-Addr. certif. Lack</label>
                </value>
                <value>
                    <fullName>S4</fullName>
                    <label>S4-Others License Lack</label>
                </value>
                <value>
                    <fullName>S5</fullName>
                    <label>S5-Missing Order</label>
                </value>
                <value>
                    <fullName>S6</fullName>
                    <label>S6-Obsolete</label>
                </value>
                <value>
                    <fullName>S7</fullName>
                    <label>S7-Inactive SF</label>
                </value>
                <value>
                    <fullName>S8</fullName>
                    <label>S8-Legal Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P011</fullName>
                    <label>P011-SINODIS ShangHai External-西诺迪斯（上海） 外部</label>
                </value>
                <value>
                    <fullName>P020</fullName>
                    <label>P020-SINODIS BeiJing-西诺迪斯（北京）</label>
                </value>
                <value>
                    <fullName>P040</fullName>
                    <label>P040-SINODIS GuangZhou-西诺迪斯（广州）</label>
                </value>
                <value>
                    <fullName>P050</fullName>
                    <label>P050-SINODIS Chengdu-西诺迪斯（成都）</label>
                </value>
                <value>
                    <fullName>P060</fullName>
                    <label>P060-SINODIS Dalian-西诺迪斯（大连）</label>
                </value>
                <value>
                    <fullName>P010</fullName>
                    <isActive>false</isActive>
                    <label>P010-SINODIS ShangHai-西诺迪斯（上海）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Department_of_Contact_Person__c</fullName>
        <label>Department of Contact Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001-Purchasing Dept</fullName>
                </value>
                <value>
                    <fullName>0002-Sales Dept</fullName>
                </value>
                <value>
                    <fullName>0003-Administration Dept</fullName>
                </value>
                <value>
                    <fullName>0004-Production Dept</fullName>
                </value>
                <value>
                    <fullName>0005-QA Dept</fullName>
                </value>
                <value>
                    <fullName>0006-Secretary&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>0007-Financial Dept</fullName>
                </value>
                <value>
                    <fullName>0008-Legal Dept</fullName>
                </value>
                <value>
                    <fullName>0009-Human Resources Dept</fullName>
                </value>
                <value>
                    <fullName>0010-General Affairs Dept</fullName>
                </value>
                <value>
                    <fullName>0011-Sales Promotion Dept</fullName>
                </value>
                <value>
                    <fullName>0012-International Dept</fullName>
                </value>
                <value>
                    <fullName>0013-Export Dept</fullName>
                </value>
                <value>
                    <fullName>0014-Import Dept</fullName>
                </value>
                <value>
                    <fullName>0015-Public Relation Dept</fullName>
                </value>
                <value>
                    <fullName>0016-Advertising Dept</fullName>
                </value>
                <value>
                    <fullName>0017-Planning Dept</fullName>
                </value>
                <value>
                    <fullName>0018-R&amp;D Dept</fullName>
                </value>
                <value>
                    <fullName>0019-Product Dev. Dept</fullName>
                </value>
                <value>
                    <fullName>0020-Food &amp; Beverage Dept</fullName>
                </value>
                <value>
                    <fullName>0021-Service Dept</fullName>
                </value>
                <value>
                    <fullName>0022-Technical Support</fullName>
                </value>
                <value>
                    <fullName>0023-IT Dept</fullName>
                </value>
                <value>
                    <fullName>0024-Logistics Dept</fullName>
                </value>
                <value>
                    <fullName>0025-Cold Kitchen</fullName>
                </value>
                <value>
                    <fullName>0026-Hot Kitchen</fullName>
                </value>
                <value>
                    <fullName>0027-Banquet Kitchen</fullName>
                </value>
                <value>
                    <fullName>0028-Pastry</fullName>
                </value>
                <value>
                    <fullName>0029-Backery</fullName>
                </value>
                <value>
                    <fullName>0030-Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Finance_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance AR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Gaode_Geolocation__c</fullName>
        <label>CN_Gaode_Geolocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CN_Gaode_Response_Status__c</fullName>
        <label>CN_Gaode_Response_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_Name_API__c</fullName>
        <formula>CN_Group_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Name API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Group_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>2 OR (1 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.CN_Sales_Team_UI__c</field>
                <operation>equals</operation>
                <valueField>CN_Group__c.CN_Sales_Team__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>CN_Group__c.CN_Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CN_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Has_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Has_Purchasing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Purchasing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Has_Ship_To_Party__c</fullName>
        <formula>IF( CN_Numbers_of_Ship_to_Party__c &gt; 0 , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Ship To Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Incoterms_Part_2__c</fullName>
        <formula>TEXT(CN_Incoterms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incoterms (Part 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Incoterms__c</fullName>
        <defaultValue>&quot;EXW-Ex Works&quot;</defaultValue>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR-Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF-Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP-Carriage and insurance paid to</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT-Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAF</fullName>
                    <label>DAF-Delivered at frontier</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP-Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <label>DDU-Delivered Duty Unpaid</label>
                </value>
                <value>
                    <fullName>DEQ</fullName>
                    <label>DEQ-Delivered ex quay (duty paid)</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <label>DES-Delivered ex ship</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <default>true</default>
                    <label>EXW-Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS-Free Alongside Ship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA-Free Carrier</label>
                </value>
                <value>
                    <fullName>FH</fullName>
                    <label>FH-Free house</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB-Free on board</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <label>UN-Not Free</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Indicator_Record_Payment_History__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Indicator: Record Payment History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Type_API__c</fullName>
        <formula>CASE(CN_Invoice_Type__c, &quot;VAT Invoice&quot;, &quot;10&quot;, &quot;General Invoice&quot;, &quot;11&quot;,&quot;Electronic VAT Invoice&quot;,&quot;12&quot;,&quot;Electronic General Invoice&quot;,&quot;13&quot;,null)</formula>
        <label>Invoice Type API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT Invoice</fullName>
                </value>
                <value>
                    <fullName>General Invoice</fullName>
                </value>
                <value>
                    <fullName>Electronic General Invoice</fullName>
                </value>
                <value>
                    <fullName>Electronic VAT Invoice</fullName>
                </value>
                <value>
                    <fullName>No need Invoice</fullName>
                    <isActive>false</isActive>
                    <label>No need invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Address_CN__c</fullName>
        <label>Invoicing Address(CN)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Address_EN__c</fullName>
        <label>Delivery Address(EN)</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Address_and_Phone__c</fullName>
        <inlineHelpText>address and phone</inlineHelpText>
        <label>Invoicing Address and Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Invoicing_Name_Bill_To_Party__c</fullName>
        <label>Invoicing Name (Bill to party)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_All_Doc_Uploaded_Except_Contract__c</fullName>
        <formula>AND(
    IF(CN_Require_Bank_Information_FaPiao__c = TRUE, IF(CN_Upload_Bank_Information_FaPiao__c = TRUE, TRUE, FALSE), TRUE),
    IF(CN_Require_Business_License__c = TRUE, IF(CN_Upload_Business_License__c = TRUE, TRUE, FALSE), TRUE),
    IF(CN_Require_Hygiene_Certificate__c = TRUE, IF(CN_Upload_Hygiene_Certificate__c = TRUE, TRUE, FALSE), TRUE)
)</formula>
        <label>Is All Doc Uploaded Except Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Contract_Uploaded__c</fullName>
        <formula>IF(CN_Require_Contract__c = TRUE, IF(CN_Upload_Contract__c = TRUE, TRUE, FALSE), TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Contract Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Cross_Channel__c</fullName>
        <description>Owner&apos;s Sales Team not equals with Account&apos;s Sales Team</description>
        <formula>OR(
   AND(
      OR(CN_Sales_Team_UI__r.CN_Sales_Team_Code__c= &quot;900012&quot;,CN_Sales_Team_UI__r.CN_Sales_Team_Code__c= &quot;900013&quot;),
      ISPICKVAL( CN_Category__c , &quot;Wholesaler&quot;) 
   ),
   AND(
      CN_Sales_Team_UI__r.CN_Sales_Team_Code__c = &quot;900012&quot;,
       TEXT(CN_City_CN__r.CN_Sales_Office__c) !=  Owner.CN_Sales_Office__c 
   )
)</formula>
        <label>Is Cross Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_In_Approving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Approving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Indirect_Acount__c</fullName>
        <formula>RecordType.DeveloperName = &apos;Indirect&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Indirect Acount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Account__c</fullName>
        <formula>OwnerId ==  $User.Id</formula>
        <label>Is My Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Sales_Owner__c</fullName>
        <formula>OR(Owner.Profile.Name == &quot;CN Sales Lead&quot;,Owner.Profile.Name == &quot;CN Sales&quot;,Owner.Profile.Name == &quot;CN Sales Manager&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sales Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Show_Payment_Report__c</fullName>
        <formula>NOT(CN_Sent_Reminder_Level__c = &quot;&quot; || CN_Sent_Reminder_Level__c = &quot;Paid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Show Payment Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_TM_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TM Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Approved_Payment_Term__c</fullName>
        <label>Latest Approved Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                    <label>CIA-Payment in advance</label>
                </value>
                <value>
                    <fullName>D000</fullName>
                    <label>D000-Cash on delivery</label>
                </value>
                <value>
                    <fullName>D005</fullName>
                    <label>D005-D05/5 days after delivery</label>
                </value>
                <value>
                    <fullName>D010</fullName>
                    <label>D010-D10/10 days after delivery</label>
                </value>
                <value>
                    <fullName>D015</fullName>
                    <label>D015-15 days after delivery</label>
                </value>
                <value>
                    <fullName>D020</fullName>
                    <label>D020-20 days, due net</label>
                </value>
                <value>
                    <fullName>D030</fullName>
                    <label>D030-30 days, due net</label>
                </value>
                <value>
                    <fullName>D045</fullName>
                    <label>D045-45 days, due net</label>
                </value>
                <value>
                    <fullName>D060</fullName>
                    <label>D060-60days, due net</label>
                </value>
                <value>
                    <fullName>D090</fullName>
                    <label>D090-90days, due net</label>
                </value>
                <value>
                    <fullName>M110</fullName>
                    <label>M110-10 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M115</fullName>
                    <label>M115-15 th of next month, due net</label>
                </value>
                <value>
                    <fullName>M131</fullName>
                    <label>M131-30 days end of month, due net</label>
                </value>
                <value>
                    <fullName>M145</fullName>
                    <label>M145-Before 15th in 2 months, due net</label>
                </value>
                <value>
                    <fullName>M231</fullName>
                    <label>M231-60 days end of month, due net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_Approved_Reference_Day__c</fullName>
        <label>Latest Approved Reference Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery_Day</fullName>
                    <label>Delivery Day</label>
                </value>
                <value>
                    <fullName>Fapiao_Day</fullName>
                    <label>Fapiao Day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Error_Message__c</fullName>
        <label>Latest Change Request Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Status__c</fullName>
        <label>Latest Change Request Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>No Need To Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Time__c</fullName>
        <label>Latest Change Request Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Credit_Term_App_Status__c</fullName>
        <label>Latest Credit Term App Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_Order_Create_Date__c</fullName>
        <label>Latest Order Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Head Quarter</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_License_Name_EN__c</fullName>
        <label>License Name(EN)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Litigation_City__c</fullName>
        <inlineHelpText>Please input the city where business license is registered, city name should include both Chinese name and English name.</inlineHelpText>
        <label>Litigation City</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Loyalty_level__c</fullName>
        <label>Loyalty level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Map_Link__c</fullName>
        <formula>if(ISNULL(CN_Gaode_Geolocation__Longitude__s) ||ISNULL(CN_Gaode_Geolocation__Latitude__s),HYPERLINK(&apos;&apos;, &apos;尚未获取到经纬度&apos;,&apos;_self&apos;),HYPERLINK(&apos;/apex/Map?lon=&apos;&amp;TEXT(CN_Gaode_Geolocation__Longitude__s)&amp;&apos;&amp;lat=&apos;&amp;TEXT(CN_Gaode_Geolocation__Latitude__s) , &apos;点击跳转到地图&apos;))</formula>
        <label>Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Nature__c</fullName>
        <label>Nature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Need_Sync_Geolocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CN_Need_Sync_Geolocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Number_Of_Stores__c</fullName>
        <label>Number of Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Numbers_of_Ship_to_Party__c</fullName>
        <label>Numbers of Ship-to Party</label>
        <summaryFilterItems>
            <field>CN_Ship_to_Party__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ship to Party</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Ship_to_Party__c.CN_Contact_Name__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Ship_to_Party__c.CN_Telephone__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Ship_to_Party__c.CN_Mobile_Phone__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CN_Ship_to_Party__c.CN_Customer_Name__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CN_Ship_to_Party__c.CN_Sold_To_Party_Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Open_During_Date__c</fullName>
        <formula>Today()- CN_Open_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open During Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Order_Block_Date__c</fullName>
        <label>Order Block Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Order_Block__c</fullName>
        <label>Order Block</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01    Overall block</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02    All free of charge</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03    Test block</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>99    test (e)</label>
                </value>
                <value>
                    <fullName>S0</fullName>
                    <label>S0-Overdue Payment</label>
                </value>
                <value>
                    <fullName>S1</fullName>
                    <label>S1-Credit Limit</label>
                </value>
                <value>
                    <fullName>S2</fullName>
                    <label>S2-Food License Lack</label>
                </value>
                <value>
                    <fullName>S3</fullName>
                    <label>S3-Addr. certif. Lack</label>
                </value>
                <value>
                    <fullName>S4</fullName>
                    <label>S4-Others License Lack</label>
                </value>
                <value>
                    <fullName>S5</fullName>
                    <label>S5-Missing Order</label>
                </value>
                <value>
                    <fullName>S6</fullName>
                    <label>S6-Obsolete</label>
                </value>
                <value>
                    <fullName>S7</fullName>
                    <label>S7-Inactive SF</label>
                </value>
                <value>
                    <fullName>S8</fullName>
                    <label>S8-Legal Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_OwnerId__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Parent_Up_Code__c</fullName>
        <formula>IF(
   NOT(ISBLANK( CN_Brand__c )) ,  CN_Brand__r.CN_Brand_Code__c , 
   IF(
     NOT(ISBLANK(  CN_Group_Name__c  )) ,  CN_Group_Name__r.CN_Group_Code__c  , 
     IF(
       NOT(ISBLANK(  CN_Sales_Team_UI__c )) ,   CN_Sales_Team_UI__r.CN_Sales_Team_Code__c  , 
       IF(
         NOT(ISBLANK( CN_Business_Unit_UI__c )) ,  CN_Business_Unit_UI__r.CN_Business_Unit_Code__c , 
         &quot;&quot;
       )
     )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent UP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Bank_Account__c</fullName>
        <label>Payment Bank Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Bank_Name__c</fullName>
        <label>Payment Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Payment_Name__c</fullName>
        <label>Payment Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>